# algofinstatix

./: .gitignore
backend/: .env.example  README.md  __init__.py  alembic.ini  pyproject.toml  pytest.ini  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2025_05_24_0153-a85d9305d869_add_roles_column_to_users_table.py  2025_05_24_0217_remove_is_active_from_users.py  2025_05_24_0258-9750ed829daf_remove_is_active_column_from_users.py  2025_05_24_0300_remove_is_active_column.py  2025_05_24_0302_remove_is_active_column.py  2025_05_24_0303_remove_is_active_column.py  2025_06_02_1759-38483a79b768_initial_database_schema.py  2025_06_04_1116-bc28b977c5b8_add_scopes_column_to_tokens.py  2025_06_11_0037-8f49697cde7f_add_meta_column_to_tokens.py
backend/scripts/: list_tables.py
backend/scripts/setup/: README_setup_instruction.md  clean_test_db.py  init_db.py  seed_db.py  setup_db.py  setup_test_db.py  start_fastapi.ps1  test_db.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  formatter.py
backend/src/core/templating/: email_templates.py  templating.py
backend/src/shared/: __init__.py
backend/src/shared/domain/: __init__.py  exceptions.py
backend/src/shared/infrastructure/: __init__.py
backend/src/users/: README.md  __init__.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: test_user_registration.py
backend/tests/utils/: api_client.py  db_helpers.py  test_data.py  test_db_connection.py
backend/tools/: update_init_files.py
backend/tools/templates/: domain_init.py  infra_init.py
(+85 files in other folders)
